// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Combobox examples > autocomplete with auto selection > should render correctly 1`] = `
<div>
  <div
    class="v-combobox"
  >
    <div
      class="v-dropdown v-flex v-flex-col v-gap-4"
    >
      <label
        class="v-label"
        for="test-id-0-input"
        id="test-id-0-label"
      >
        Label
      </label>
      <div
        class="v-surface v-input-container v-flex v-flex-row"
      >
        <input
          aria-activedescendant=""
          aria-autocomplete="list"
          aria-controls="test-id-0-menu"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="test-id-0-label"
          aria-owns="test-id-0-menu"
          autocomplete="off"
          class="v-input"
          id="test-id-0-input"
          name="text-input-field-11"
          role="combobox"
          type="text"
          value=""
        />
        <button
          aria-controls="test-id-0-menu"
          aria-expanded="false"
          aria-label="expand"
          class="v-button v-button-small v-button-tertiary v-button-icon"
          id="test-id-0-toggle-button"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="v-listbox-container"
    >
      <ul
        aria-labelledby="test-id-0-label"
        class="v-listbox"
        id="test-id-0-menu"
        role="listbox"
      >
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-0"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option A
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-1"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option B
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-2"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option C
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-3"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option D
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-4"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option E
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Combobox examples > autocomplete with manual selection > should render correctly 1`] = `
<div>
  <div
    class="v-combobox"
  >
    <div
      class="v-dropdown v-flex v-flex-col v-gap-4"
    >
      <label
        class="v-label"
        for="test-id-0-input"
        id="test-id-0-label"
      >
        Label
      </label>
      <div
        class="v-surface v-input-container v-flex v-flex-row"
      >
        <input
          aria-activedescendant=""
          aria-autocomplete="list"
          aria-controls="test-id-0-menu"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="test-id-0-label"
          aria-owns="test-id-0-menu"
          autocomplete="off"
          class="v-input"
          id="test-id-0-input"
          name="text-input-field-12"
          role="combobox"
          type="text"
          value=""
        />
        <button
          aria-controls="test-id-0-menu"
          aria-expanded="false"
          aria-label="expand"
          class="v-button v-button-small v-button-tertiary v-button-icon"
          id="test-id-0-toggle-button"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="v-listbox-container"
    >
      <ul
        aria-labelledby="test-id-0-label"
        class="v-listbox"
        id="test-id-0-menu"
        role="listbox"
      >
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-0"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option A
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-1"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option B
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-2"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option C
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-3"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option D
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-4"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option E
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Combobox examples > clear button combobox > should render correctly 1`] = `
<div>
  <div
    class="v-combobox"
  >
    <div
      class="v-dropdown v-flex v-flex-col v-gap-4"
    >
      <label
        class="v-label"
        for="test-id-0-input"
        id="test-id-0-label"
      >
        Label
      </label>
      <div
        class="v-surface v-input-container v-flex v-flex-row"
      >
        <input
          aria-activedescendant=""
          aria-autocomplete="list"
          aria-controls="test-id-0-menu"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="test-id-0-label"
          aria-owns="test-id-0-menu"
          autocomplete="off"
          class="v-input"
          id="test-id-0-input"
          name="text-input-field-4"
          role="combobox"
          type="text"
          value="Option A"
        />
        <button
          aria-controls="test-id-0-menu"
          aria-expanded="false"
          aria-label="expand"
          class="v-button v-button-small v-button-tertiary v-button-icon"
          id="test-id-0-toggle-button"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="v-listbox-container"
    >
      <ul
        aria-labelledby="test-id-0-label"
        class="v-listbox"
        id="test-id-0-menu"
        role="listbox"
      >
        <li
          aria-disabled="false"
          aria-selected="true"
          class="v-listbox-item"
          id="test-id-0-item-0"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option A
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-1"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option B
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-2"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option C
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-3"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option D
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-4"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option E
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Combobox examples > combobox with item disabled > should render correctly 1`] = `
<div>
  <div
    class="v-combobox"
  >
    <div
      class="v-dropdown v-flex v-flex-col v-gap-4"
    >
      <label
        class="v-label"
        for="test-id-0-input"
        id="test-id-0-label"
      >
        Label
      </label>
      <div
        class="v-surface v-input-container v-flex v-flex-row"
      >
        <input
          aria-activedescendant=""
          aria-autocomplete="list"
          aria-controls="test-id-0-menu"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="test-id-0-label"
          aria-owns="test-id-0-menu"
          autocomplete="off"
          class="v-input"
          id="test-id-0-input"
          name="text-input-field-9"
          role="combobox"
          type="text"
          value=""
        />
        <button
          aria-controls="test-id-0-menu"
          aria-expanded="false"
          aria-label="expand"
          class="v-button v-button-small v-button-tertiary v-button-icon"
          id="test-id-0-toggle-button"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="v-listbox-container"
    >
      <ul
        aria-labelledby="test-id-0-label"
        class="v-listbox"
        id="test-id-0-menu"
        role="listbox"
      >
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-0"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option A
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-1"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option B
        </li>
        <li
          aria-disabled="true"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-2"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option C
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-3"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option D
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-4"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option E
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Combobox examples > combobox without chevron icon > should render correctly 1`] = `
<div>
  <div
    class="v-combobox"
  >
    <div
      class="v-dropdown v-flex v-flex-col v-gap-4"
    >
      <label
        class="v-label"
        for="test-id-0-input"
        id="test-id-0-label"
      >
        Label
      </label>
      <div
        class="v-surface v-input-container v-flex v-flex-row"
      >
        <input
          aria-activedescendant=""
          aria-autocomplete="list"
          aria-controls="test-id-0-menu"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="test-id-0-label"
          aria-owns="test-id-0-menu"
          autocomplete="off"
          class="v-input"
          id="test-id-0-input"
          name="text-input-field-10"
          role="combobox"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="v-listbox-container"
    >
      <ul
        aria-labelledby="test-id-0-label"
        class="v-listbox"
        id="test-id-0-menu"
        role="listbox"
      >
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-0"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option A
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-1"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option B
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-2"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option C
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-3"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option D
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-4"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option E
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Combobox examples > default combobox > should render correctly 1`] = `
<div>
  <div
    class="v-combobox"
  >
    <div
      class="v-dropdown v-flex v-flex-col v-gap-4"
    >
      <label
        class="v-label"
        for="test-id-0-input"
        id="test-id-0-label"
      >
        Label
      </label>
      <div
        class="v-surface v-input-container v-flex v-flex-row"
      >
        <input
          aria-activedescendant=""
          aria-autocomplete="list"
          aria-controls="test-id-0-menu"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="test-id-0-label"
          aria-owns="test-id-0-menu"
          autocomplete="off"
          class="v-input"
          id="test-id-0-input"
          name="text-input-field-1"
          role="combobox"
          type="text"
          value=""
        />
        <button
          aria-controls="test-id-0-menu"
          aria-expanded="false"
          aria-label="expand"
          class="v-button v-button-small v-button-tertiary v-button-icon"
          id="test-id-0-toggle-button"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="v-listbox-container"
    >
      <ul
        aria-labelledby="test-id-0-label"
        class="v-listbox"
        id="test-id-0-menu"
        role="listbox"
      >
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-0"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option A
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-1"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option B
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-2"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option C
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-3"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option D
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-4"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option E
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Combobox examples > disabled combobox > should render correctly 1`] = `
<div>
  <div
    class="v-combobox"
  >
    <div
      class="v-dropdown v-flex v-flex-col v-gap-4"
    >
      <label
        class="v-label"
        for="test-id-0-input"
        id="test-id-0-label"
      >
        Label
      </label>
      <div
        class="v-surface v-input-container v-flex v-flex-row"
      >
        <input
          aria-activedescendant=""
          aria-autocomplete="list"
          aria-controls="test-id-0-menu"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="test-id-0-label"
          aria-owns="test-id-0-menu"
          autocomplete="off"
          class="v-input"
          disabled=""
          id="test-id-0-input"
          name="text-input-field-8"
          role="combobox"
          type="text"
          value="Option A"
        />
        <button
          aria-controls="test-id-0-menu"
          aria-expanded="false"
          aria-label="expand"
          class="v-button v-button-small v-button-tertiary v-button-icon"
          id="test-id-0-toggle-button"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="v-listbox-container"
    >
      <ul
        aria-labelledby="test-id-0-label"
        class="v-listbox"
        id="test-id-0-menu"
        role="listbox"
      >
        <li
          aria-disabled="false"
          aria-selected="true"
          class="v-listbox-item"
          id="test-id-0-item-0"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option A
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-1"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option B
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-2"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option C
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-3"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option D
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-4"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option E
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Combobox examples > error combobox > should render correctly 1`] = `
<div>
  <div
    class="v-flex v-flex-col v-gap-12"
  >
    <div
      class="v-combobox"
    >
      <div
        class="v-dropdown v-flex v-flex-col v-gap-4"
      >
        <label
          class="v-label"
          for="test-id-0-input"
          id="test-id-0-label"
        >
          Label (required)
        </label>
        <div
          class="v-surface v-input-container v-flex-row"
        >
          <input
            aria-activedescendant=""
            aria-autocomplete="list"
            aria-controls="test-id-0-menu"
            aria-describedby="input-error-message"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-invalid="false"
            aria-labelledby="test-id-0-label"
            aria-owns="test-id-0-menu"
            autocomplete="off"
            class="v-input"
            id="test-id-0-input"
            name="text-input-field-6"
            role="combobox"
            type="text"
            value=""
          />
          <button
            aria-controls="test-id-0-menu"
            aria-expanded="false"
            aria-label="expand"
            class="v-button v-button-small v-button-tertiary v-button-icon"
            id="test-id-0-toggle-button"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="v-icon-primary"
                d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="v-listbox-container"
      >
        <ul
          aria-labelledby="test-id-0-label"
          class="v-listbox"
          id="test-id-0-menu"
          role="listbox"
        >
          <li
            aria-disabled="false"
            aria-selected="false"
            class="v-listbox-item"
            id="test-id-0-item-0"
            role="option"
          >
            <span
              class="v-radio v-flex-shrink-0"
            />
            Option A
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="v-listbox-item"
            id="test-id-0-item-1"
            role="option"
          >
            <span
              class="v-radio v-flex-shrink-0"
            />
            Option B
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="v-listbox-item"
            id="test-id-0-item-2"
            role="option"
          >
            <span
              class="v-radio v-flex-shrink-0"
            />
            Option C
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="v-listbox-item"
            id="test-id-0-item-3"
            role="option"
          >
            <span
              class="v-radio v-flex-shrink-0"
            />
            Option D
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="v-listbox-item"
            id="test-id-0-item-4"
            role="option"
          >
            <span
              class="v-radio v-flex-shrink-0"
            />
            Option E
          </li>
        </ul>
      </div>
    </div>
    <div
      class="v-flex v-gap-12"
    >
      <button
        class="v-button"
      >
        Submit
      </button>
      <button
        class="v-button v-button-secondary"
      >
        Reset
      </button>
    </div>
  </div>
</div>
`;

exports[`Combobox examples > inline message combobox > should render correctly 1`] = `
<div>
  <div
    class="v-combobox"
  >
    <div
      class="v-dropdown v-flex v-flex-col v-gap-4"
    >
      <label
        class="v-label"
        for="test-id-0-input"
        id="test-id-0-label"
      >
        Label
      </label>
      <div
        class="v-surface v-input-container v-flex v-flex-row"
      >
        <input
          aria-activedescendant=""
          aria-autocomplete="list"
          aria-controls="test-id-0-menu"
          aria-describedby="combobox-inline-message"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="test-id-0-label"
          aria-owns="test-id-0-menu"
          autocomplete="off"
          class="v-input"
          id="test-id-0-input"
          name="text-input-field-3"
          role="combobox"
          type="text"
          value=""
        />
        <button
          aria-controls="test-id-0-menu"
          aria-expanded="false"
          aria-label="expand"
          class="v-button v-button-small v-button-tertiary v-button-icon"
          id="test-id-0-toggle-button"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
        </button>
      </div>
      <span
        class="v-input-message"
        id="combobox-inline-message"
      >
        This is optional text that describes the label in more detail.
      </span>
    </div>
    <div
      class="v-listbox-container"
    >
      <ul
        aria-labelledby="test-id-0-label"
        class="v-listbox"
        id="test-id-0-menu"
        role="listbox"
      >
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-0"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option A
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-1"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option B
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-2"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option C
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-3"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option D
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-4"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option E
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Combobox examples > leading icon combobox > should render correctly 1`] = `
<div>
  <div
    class="v-combobox"
  >
    <div
      class="v-dropdown v-flex v-flex-col v-gap-4"
    >
      <label
        class="v-label"
        for="test-id-0-input"
        id="test-id-0-label"
      >
        Label
      </label>
      <div
        class="v-surface v-input-container v-flex v-flex-row"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-low v-icon-search"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-secondary"
            d="M24 22.4814L22.4814 24L15 16.5186C15.5551 16.0641 16.0641 15.5551 16.5186 15L24 22.4814ZM9 5C11.2056 5 13 6.79443 13 9H11C11 7.89697 10.103 7 9 7V5Z"
          />
          <path
            class="v-icon-primary"
            d="M9 1C13.4111 1 17 4.58887 17 9C17 13.4111 13.4111 17 9 17C4.58887 17 1 13.4111 1 9C1 4.58887 4.58887 1 9 1ZM9 3C5.69141 3 3 5.69141 3 9C3 12.3086 5.69141 15 9 15C12.3086 15 15 12.3086 15 9C15 5.69141 12.3086 3 9 3Z"
          />
        </svg>
        <input
          aria-activedescendant=""
          aria-autocomplete="list"
          aria-controls="test-id-0-menu"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="test-id-0-label"
          aria-owns="test-id-0-menu"
          autocomplete="off"
          class="v-input"
          id="test-id-0-input"
          name="text-input-field-5"
          role="combobox"
          type="text"
          value=""
        />
        <button
          aria-controls="test-id-0-menu"
          aria-expanded="false"
          aria-label="expand"
          class="v-button v-button-small v-button-tertiary v-button-icon"
          id="test-id-0-toggle-button"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="v-listbox-container"
    >
      <ul
        aria-labelledby="test-id-0-label"
        class="v-listbox"
        id="test-id-0-menu"
        role="listbox"
      >
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-0"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option A
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-1"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option B
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-2"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option C
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-3"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option D
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-4"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option E
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Combobox examples > pre-selected combobox > should render correctly 1`] = `
<div>
  <div
    class="v-combobox"
  >
    <div
      class="v-dropdown v-flex v-flex-col v-gap-4"
    >
      <label
        class="v-label"
        for="test-id-0-input"
        id="test-id-0-label"
      >
        Label
      </label>
      <div
        class="v-surface v-input-container v-flex v-flex-row"
      >
        <input
          aria-activedescendant=""
          aria-autocomplete="list"
          aria-controls="test-id-0-menu"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="test-id-0-label"
          aria-owns="test-id-0-menu"
          autocomplete="off"
          class="v-input"
          id="test-id-0-input"
          name="text-input-field-2"
          role="combobox"
          type="text"
          value="Option A"
        />
        <button
          aria-controls="test-id-0-menu"
          aria-expanded="false"
          aria-label="expand"
          class="v-button v-button-small v-button-tertiary v-button-icon"
          id="test-id-0-toggle-button"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="v-listbox-container"
    >
      <ul
        aria-labelledby="test-id-0-label"
        class="v-listbox"
        id="test-id-0-menu"
        role="listbox"
      >
        <li
          aria-disabled="false"
          aria-selected="true"
          class="v-listbox-item"
          id="test-id-0-item-0"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option A
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-1"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option B
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-2"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option C
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-3"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option D
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-4"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option E
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Combobox examples > read-only combobox > should render correctly 1`] = `
<div>
  <div
    class="v-combobox"
  >
    <div
      class="v-dropdown v-flex v-flex-col v-gap-4"
    >
      <label
        class="v-label"
        for="test-id-0-input"
        id="test-id-0-label"
      >
        Label
      </label>
      <div
        class="v-surface v-input-container v-flex v-flex-row"
      >
        <input
          aria-activedescendant=""
          aria-autocomplete="list"
          aria-controls="test-id-0-menu"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="test-id-0-label"
          aria-owns="combobox-listbox-example-7"
          autocomplete="off"
          class="v-input"
          id="test-id-0-input"
          name="text-input-field-7"
          readonly=""
          role="combobox"
          type="text"
          value="Option A"
        />
        <button
          aria-controls="test-id-0-menu"
          aria-expanded="false"
          aria-label="expand"
          class="v-button v-button-small v-button-tertiary v-button-icon"
          disabled=""
          id="test-id-0-toggle-button"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="v-listbox-container"
    >
      <ul
        aria-labelledby="test-id-0-label"
        class="v-listbox"
        id="test-id-0-menu"
        role="listbox"
      >
        <li
          aria-disabled="false"
          aria-selected="true"
          class="v-listbox-item"
          id="test-id-0-item-0"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option A
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-1"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option B
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-2"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option C
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-3"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option D
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="test-id-0-item-4"
          role="option"
        >
          <span
            class="v-radio v-flex-shrink-0"
          />
          Option E
        </li>
      </ul>
    </div>
  </div>
</div>
`;
